<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ParcelableActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/profil" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvUsia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usia" />

    <EditText
        android:id="@+id/etUsia"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/usia1"
        android:inputType="number" />

    <ImageButton
        android:id="@+id/ibResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:padding="8dp" />

</LinearLayout>
